// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action page component should render children when passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-one-half"
  >
    FORM
  </div>
</div>
`;

exports[`Action page component should render with default props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-one-half"
  />
</div>
`;

exports[`Action page component should render with subTitle when passed in props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-one-half"
  />
</div>
`;

exports[`Action page component should render with title when passed in props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-one-half"
  >
    <h1
      class="govuk-heading-l"
    >
      MY_TITLE
    </h1>
  </div>
</div>
`;
